--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
   
 {% block body_content %}
-<p>About this app, content to be added later</p>
+<p>This is a Quick --> Start Application. providing you with the bare bonses needed to develop a python3 application. Be sure to read the contents within the doncumentation as to better understand the requirements needed to succesfully launch this app. Many Thanks!</p>
 {% endblock %}
