--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -14,7 +14,6 @@
 				<li><a href="{{ url_for('home') }}">Home</a></li>
 				<li><a href="{{ url_for('about') }}">About</a></li>
 				{% if current_user.is_authenticated %}
-				<li><a href="{{ url_for('home') }}">My Collection</a></li>
 				<li><a href="{{ url_for('account') }}">My Account</a></li>
 				<li><a href="{{ url_for('logout') }}">Logout</a></li>
 				{% else %}
@@ -26,11 +25,11 @@
 
 		<div id="Sub-Menu">
 			<ul>
-				<li><a href="{{ url_for('home') }}">Movie List</a></li>
+				<li><a href="{{ url_for('home') }}">other home button</a></li>
 				{% if current_user.is_authenticated %}
-				<li><a href="{{ url_for('home') }}">Create Movie</a></li>
+				<li><a href="{{ url_for('logout') }}">Logout</a></li>
 				{% else %}
-				<li>Create Movie</li>
+				<li>logout not in use</li>
 				{% endif %}
 			</ul>
 		</div>
